tests/baselines/reference/parserSetAccessorWithTypeParameters1.errors.txt
==== tests/cases/compiler/parserSetAccessorWithTypeParameters1.ts (1 errors) ====
    class C {
       set foo<T>(v) { }
              ~~~
!!! parserSetAccessorWithTypeParameters1.ts(2,11): error TS1094: Type parameters cannot appear on an accessor.
    }